fix: risolto l'overflow della copertina CD nel dettaglio gioco

--- a/src/styles/components/_gamedetail.scss
+++ b/src/styles/components/_gamedetail.scss
@@ -101,7 +101,9 @@
       }
 
       .case-cover-art {
+        width: 0;
         flex-grow: 1;
+        min-width: 0;
         height: 100%;
         object-fit: cover;
         image-rendering: pixelated;
